[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/main/ui/level-select/GradeLabels.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/world/career-map.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/level-select/BossLevelSelectButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/world/OverworldBg.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/level-select/LevelSelectButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/career/CareerRewinder.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/world/environment/EmptyEnvironment.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/career/ui/ProgressBoard.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/main/ui/touch/menu.png" type="Texture" id=10]
[ext_resource path="res://assets/main/ui/touch/menu-pressed.png" type="Texture" id=11]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/main/career/ui/career-distance-label.gd" type="Script" id=13]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/main/ui/level-select/HardcoreLevelSelectButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/career/ui/career-time-label.gd" type="Script" id=16]
[ext_resource path="res://src/main/ui/level-select/HardcoreBossLevelSelectButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/main/ui/font/blogger-sans-bold.otf" type="DynamicFontData" id=18]
[ext_resource path="res://src/main/career/career-hint.gd" type="Script" id=19]
[ext_resource path="res://src/main/career/hint-accent.gd" type="Script" id=20]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/main/world/career-world.gd" type="Script" id=25]
[ext_resource path="res://src/main/career/ui/career-map-level-select.gd" type="Script" id=28]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=42]
[ext_resource path="res://src/main/ui/money-font.tres" type="DynamicFont" id=43]
[ext_resource path="res://src/main/career/ui/career-map-ui.gd" type="Script" id=45]
[ext_resource path="res://assets/main/career/ui/icon-distance.png" type="Texture" id=46]
[ext_resource path="res://assets/main/career/ui/icon-time-of-day-sheet.png" type="Texture" id=47]
[ext_resource path="res://src/main/world/environment/MileMarker.tscn" type="PackedScene" id=48]
[ext_resource path="res://src/main/world/career-camera.gd" type="Script" id=49]

[sub_resource type="DynamicFont" id=23]
outline_size = 2
outline_color = Color( 0.423529, 0.262745, 0.192157, 1 )
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.423529, 0.262745, 0.192157, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.423529, 0.262745, 0.192157, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="InputEventAction" id=22]
action = "ui_cancel"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 22 )

[node name="CareerMap" type="Node"]
script = ExtResource( 2 )

[node name="Bg" parent="." instance=ExtResource( 4 )]
outer_space_visible = true

[node name="World" type="Node" parent="."]
script = ExtResource( 25 )
MileMarkerScene = ExtResource( 48 )

[node name="Environment" parent="World" instance=ExtResource( 8 )]

[node name="Camera" type="Camera2D" parent="World"]
current = true
zoom = Vector2( 0.8, 0.8 )
script = ExtResource( 49 )

[node name="LevelSelect" type="CanvasLayer" parent="."]
script = ExtResource( 28 )
LevelSelectButtonScene = ExtResource( 6 )
HardcoreLevelSelectButtonScene = ExtResource( 15 )
BossLevelSelectButtonScene = ExtResource( 3 )
HardcoreBossLevelSelectButtonScene = ExtResource( 17 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect"]
anchor_right = 1.0
margin_left = 32.0
margin_top = 52.0
margin_right = -32.0
margin_bottom = 189.0
rect_min_size = Vector2( 960, 0 )
mouse_filter = 0
size_flags_vertical = 3

[node name="LevelButtons" type="Control" parent="LevelSelect/VBoxContainer"]
margin_right = 960.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelect/VBoxContainer/LevelButtons"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="GradeLabels" parent="LevelSelect/VBoxContainer/LevelButtons" instance=ExtResource( 1 )]

[node name="Hint" type="Label" parent="LevelSelect/VBoxContainer"]
margin_top = 134.0
margin_right = 960.0
margin_bottom = 151.0
rect_min_size = Vector2( 84, 0 )
custom_colors/font_color = Color( 1, 0.942667, 0.92, 1 )
custom_fonts/font = SubResource( 23 )
text = "The left level is further from the goal. Choose carefully!"
align = 1
valign = 1
script = ExtResource( 19 )

[node name="Accent" type="Panel" parent="LevelSelect/VBoxContainer/Hint"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.5
margin_top = -3.5
margin_right = 209.5
margin_bottom = 6.5
custom_styles/panel = SubResource( 24 )
script = ExtResource( 20 )

[node name="ProgressBoardHolder" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Ui" type="CanvasLayer" parent="."]
script = ExtResource( 45 )

[node name="Control" type="Control" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StatusBar" type="Panel" parent="Ui/Control"]
self_modulate = Color( 1, 1, 1, 0.313726 )
anchor_right = 1.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = SubResource( 20 )

[node name="Money" parent="Ui/Control/StatusBar" instance=ExtResource( 42 )]
compact = true

[node name="Distance" type="Control" parent="Ui/Control/StatusBar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
script = ExtResource( 13 )
level_select_path = NodePath("../../../../LevelSelect")

[node name="TextureRect" type="Control" parent="Ui/Control/StatusBar/Distance"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="IconSprite" type="Sprite" parent="Ui/Control/StatusBar/Distance/TextureRect"]
position = Vector2( 16, 16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 46 )

[node name="Label" type="Label" parent="Ui/Control/StatusBar/Distance"]
margin_left = 36.0
margin_top = 2.5
margin_right = 120.0
margin_bottom = 34.5
rect_min_size = Vector2( 84, 0 )
custom_colors/font_color = Color( 1, 0.942667, 0.92, 1 )
custom_fonts/font = ExtResource( 43 )
text = "999,999"
valign = 1

[node name="Time" type="Control" parent="Ui/Control/StatusBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -136.0
margin_right = -136.0
margin_bottom = 32.0
rect_min_size = Vector2( 136, 32 )
mouse_filter = 2
script = ExtResource( 16 )

[node name="Icon" type="Control" parent="Ui/Control/StatusBar/Time"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="IconSprite" type="Sprite" parent="Ui/Control/StatusBar/Time/Icon"]
position = Vector2( 16, 16 )
scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 47 )
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="Ui/Control/StatusBar/Time"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -124.0
margin_top = 2.5
margin_right = -4.0
margin_bottom = 34.5
rect_min_size = Vector2( 120, 32 )
custom_colors/font_color = Color( 1, 0.942667, 0.92, 1 )
custom_fonts/font = ExtResource( 43 )
text = "12:05 am"
align = 2
valign = 1

[node name="SettingsButton" parent="Ui/Control" instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 1.0
anchor_top = 1.0
margin_left = -120.0
margin_top = -120.0
margin_right = -20.0
margin_bottom = -20.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
shortcut = SubResource( 14 )
icon = ExtResource( 10 )
expand_icon = true
normal_icon = ExtResource( 10 )
pressed_icon = ExtResource( 11 )

[node name="ShortcutHelper" parent="Ui/Control/SettingsButton" instance=ExtResource( 21 )]
action = "ui_menu"

[node name="SettingsMenu" parent="Ui" instance=ExtResource( 14 )]
layer = 5
quit_type = 3

[node name="CheatCodeDetector" parent="Ui" instance=ExtResource( 5 )]
codes = [ "bossio", "cambra", "cutsio", "cyclio", "epilio", "hardio", "moveme" ]

[node name="CareerRewinder" parent="." instance=ExtResource( 7 )]
cheat_code_detector_path = NodePath("../Ui/CheatCodeDetector")

[connection signal="level_button_focused" from="LevelSelect" to="World" method="_on_LevelSelect_level_button_focused"]
[connection signal="level_button_focused" from="LevelSelect" to="Ui/Control/StatusBar/Distance" method="_on_LevelSelect_level_button_focused"]
[connection signal="progress_board_hidden" from="ProgressBoardHolder" to="." method="_on_ProgressBoardHolder_progress_board_hidden"]
[connection signal="progress_board_hidden" from="ProgressBoardHolder" to="Ui" method="_on_ProgressBoardHolder_progress_board_hidden"]
[connection signal="progress_board_shown" from="ProgressBoardHolder" to="Ui" method="_on_ProgressBoardHolder_progress_board_shown"]
[connection signal="pressed" from="Ui/Control/SettingsButton" to="Ui" method="_on_SettingsButton_pressed"]
[connection signal="hide" from="Ui/SettingsMenu" to="LevelSelect" method="_on_SettingsMenu_hide"]
[connection signal="hide" from="Ui/SettingsMenu" to="Ui" method="_on_SettingsMenu_hide"]
[connection signal="other_quit_pressed" from="Ui/SettingsMenu" to="Ui" method="_on_SettingsMenu_other_quit_pressed"]
[connection signal="quit_pressed" from="Ui/SettingsMenu" to="Ui" method="_on_SettingsMenu_quit_pressed"]
[connection signal="show" from="Ui/SettingsMenu" to="LevelSelect" method="_on_SettingsMenu_show"]
[connection signal="show" from="Ui/SettingsMenu" to="Ui" method="_on_SettingsMenu_show"]
[connection signal="cheat_detected" from="Ui/CheatCodeDetector" to="World" method="_on_CheatCodeDetector_cheat_detected"]
[connection signal="cheat_detected" from="Ui/CheatCodeDetector" to="Ui" method="_on_CheatCodeDetector_cheat_detected"]
